# shooter

./: .gitignore  Cargo.toml  README.md
src/: app.rs  background.rs  defs.rs  draw.rs  entity.rs  input.rs  main.rs  sound.rs  stage.rs  text.rs  util.rs
src/backend/: mod.rs  sdl2.rs
src/engine/: app.rs  audio.rs  draw.rs  mod.rs  scene.rs  traits.rs  util.rs
src/entity/: bullet.rs  debris.rs  explosion.rs  mod.rs
