[package]
name = "shooter"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.4"
derive_builder = "0.10.2"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image", "static-link", "use-vcpkg", "unsafe_textures"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
