[package]
name = "shooter"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
rand = "0.8.4"
derive_builder = "0.10.2"
png = "0.17.1"
geemu_audio = { path = "external/geemu_audio"}

[dependencies.rodio]
version = "0.14.0"
default-features = false
features = ["vorbis"]

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["static-link", "use-vcpkg", "unsafe_textures"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
