[package]
name = "shooter"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8"
derive_builder = "0.10"
geemu_audio = { path = "external/geemu_audio"}
geemu_engine = { path = "external/geemu_engine"}
derive_more = "0.99"

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
